# FreeCAD-Agent

./: .editorconfig  .gitignore  AGENTS.md  FreeCAD AI Agent Sidebar Development - SRS Document.md  InitGui.py  README.md  package.xml  pyproject.toml
Documentation/: README.md
Documentation/Usage/: MVP.md
Resources/Documents/: Overview.md
freecad/AIAgentSidebar/: __init__.py  context.py  detection.py  init_gui.py  process.py  prompt.py  qt_compat.py  resources.py  sidebar.py  signals.py
scripts/: freecad_headless_smoke.py
tests/: test_detection.py  test_imports.py  test_init_gui.py  test_process.py  test_prompt_context.py  test_sidebar.py
