# SPDX-License-Identifier: LGPL-3.0-or-later
# SPDX-FileNotice: Part of the FreeCAD AI Agent Sidebar addon.

[project]
version = '0.1.0'
name = 'freecad-ai-agent-sidebar'
description = 'FreeCAD dockable sidebar for streaming prompts through local AI coding agents.'

requires-python = '>=3.11'

dependencies = []

[tool.pytest.ini_options]
testpaths = ['tests']
